# MiniLang

./: .gitignore  CMakeLists.txt  README.md
include/: AST.h  CodeGen.h  Dialect.h  LLVMIRGen.h  Lexer.h  MLIRGen.h  Parser.h  Passes.h  Token.h
src/: CodeGen.cpp  Dialect.cpp  LLVMIRGen.cpp  Lexer.cpp  MLIRGen.cpp  Parser.cpp  Passes.cpp  main.cpp
test/: arithmetic.ml  assignment.ml  error_incomplete_expression.ml  error_missing_operand.ml  error_missing_semicolon.ml  error_unknown_identifier.ml  test_functions.ml  test_if.ml  test_while.ml  valid.ml
