cmake_minimum_required(VERSION 3.20)
project(MiniLang)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

# Find LLVM and MLIR
find_package(MLIR REQUIRED CONFIG)
find_package(LLVM REQUIRED CONFIG)

message(STATUS "Using MLIRConfig.cmake in: ${MLIR_DIR}")
message(STATUS "Using LLVMConfig.cmake in: ${LLVM_DIR}")

list(APPEND CMAKE_MODULE_PATH "${MLIR_CMAKE_DIR}")
list(APPEND CMAKE_MODULE_PATH "${LLVM_CMAKE_DIR}")

include(TableGen)
include(AddLLVM)
include(AddMLIR)

include_directories(${LLVM_INCLUDE_DIRS})
include_directories(${MLIR_INCLUDE_DIRS})
include_directories(${PROJECT_SOURCE_DIR}/include)
include_directories(${PROJECT_BINARY_DIR}/include)

add_definitions(${LLVM_DEFINITIONS})

# Source files
set(SOURCES
    src/Lexer.cpp
    src/Parser.cpp
    src/Dialect.cpp
    src/MLIRGen.cpp
    src/LLVMIRGen.cpp
    src/main.cpp
)

# Executable
add_executable(minilang ${SOURCES})

# Link libraries
target_link_libraries(minilang
    PRIVATE
    MLIRAnalysis
    MLIRIR
    MLIRParser
    MLIRPass
    MLIRTransforms
    MLIRSupport
    MLIRLLVMCommonConversion
    MLIRLLVMDialect
    MLIRFuncDialect
    MLIRFuncToLLVM
    MLIRTargetLLVMIRExport
    MLIRToLLVMIRTranslationRegistration
    LLVMCore
    LLVMSupport
    LLVMTarget
    LLVMTargetParser
    LLVMMC
)